--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <h1>To-Do App</h1>
+    <header>
+      <h1>To-Do App</h1>
+    </header>
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
       <input type="text" id="newToDoText">
       <button type="summit">Add To-Do !</button>
     </form>
-    <ul id="toDoList">
-    </ul>
+    <ul id="toDoList"></ul>
     <script src="app.js"></script>
   </body>
   </html>
