--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
       <input type="text" id="newToDoText">
-      <button type="summit">Add To-Do !
-      <button class= "mdl-button mdl-js-button mdl-button--raised mdl-button--accent">
-      </button>
+      <button type="summit" class= "mdl-button mdl-js-button mdl-button--raised mdl-button--accent">Add To-Do!</button>
       </button>  
     </form>
     <ul id="toDoList"></ul>
