--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
@@ -13,9 +15,9 @@
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
       <input type="text" id="newToDoText">
-      <button type="summit"class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Add To-Do !</button>
+      <button type="summit"class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">Add To-Do !</button>
     </form>
-    <ul id="toDoList"></ul>
-    <script src="app.js"></script>
+    <ul id="toDoList" ></ul>
+    <script src="app.js" ></script>
   </body>
   </html>
