--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>To-Do App</title>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <link rel="stylesheet" href="styles/main.css">
-  </head>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>To-Do App</title>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <link rel="stylesheet" href="styles/main.css">
+</head>
+<div class="demo-layout-transparent mdl-layout mdl-js-layout">
+    <div class="mdl-layout__header-row">
+      <div class="mdl-layout-spacer"></div>
+    </div>
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">My list's</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="">Grocery List</a>
+      <a class="mdl-navigation__link" href="">School Work</a>
+      <a class="mdl-navigation__link" href="">Workouts</a>
+      <a class="mdl-navigation__link" href="">Books</a>
+    </nav>
+  </div>
+  <main class="mdl-layout__content">
+  </main>
+</div>
+
   <body>
     <header>
       <h1>To-Do App</h1>
+      <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+        <i class="material-icons" id="add">add</i></button>
     </header>
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
