--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
+<header>
+  <h1>To-Do App</h1>
+  <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+    <i class="material-icons" id="add">add</i></button>
+</header>
+<body>
 <div class="demo-layout-transparent mdl-layout mdl-js-layout">
     <div class="mdl-layout__header-row">
       <div class="mdl-layout-spacer"></div>
@@ -24,19 +30,13 @@
   <main class="mdl-layout__content">
   </main>
 </div>
-
-  <body>
-    <header>
-      <h1>To-Do App</h1>
-      <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
-        <i class="material-icons" id="add">add</i></button>
-    </header>
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
       <input type="text" id="newToDoText">
-      <button type="summit"class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">Add To-Do !</button>
+      <button type="summit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">Add To-Do !</button>
     </form>
-    <ul id="toDoList"></ul>
+    <ul id="toDoList">
+    </ul>
     <script src="app.js" ></script>
   </body>
   </html>
