--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="styles/main.css">
+  <div class="demo-layout-transparent mdl-layout mdl-js-layout">
+      <div class="mdl-layout__header-row">
+        <div class="mdl-layout-spacer"></div>
+      </div>
+    <div class="mdl-layout__drawer">
+      <span class="mdl-layout-title">My list's</span>
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="">Grocery List</a>
+        <a class="mdl-navigation__link" href="">School Work</a>
+        <a class="mdl-navigation__link" href="">Workouts</a>
+        <a class="mdl-navigation__link" href="">Books</a>
+      </nav>
+    </div>
 </head>
 <header>
   <h1>To-Do App</h1>
-  <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+  <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" id="plus">
     <i class="material-icons" id="add">add</i></button>
 </header>
 <body>
-<div class="demo-layout-transparent mdl-layout mdl-js-layout">
-    <div class="mdl-layout__header-row">
-      <div class="mdl-layout-spacer"></div>
-    </div>
-  <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">My list's</span>
-    <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="">Grocery List</a>
-      <a class="mdl-navigation__link" href="">School Work</a>
-      <a class="mdl-navigation__link" href="">Workouts</a>
-      <a class="mdl-navigation__link" href="">Books</a>
-    </nav>
-  </div>
+  <div>
   <main class="mdl-layout__content">
   </main>
-</div>
     <form id="addToDoForm">
       <label for="newToDoText">New To-Do:</label>
       <input type="text" id="newToDoText">
@@ -37,6 +37,7 @@
     </form>
     <ul id="toDoList">
     </ul>
+  </div>
     <script src="app.js" ></script>
   </body>
   </html>
